--- a/jogo.html
+++ b/jogo.html
@@ -16,9 +16,7 @@
                 margin: 0;
                 padding: 0;
                 background-color: #120a8f;
-                box-sizing: border-box;
-                font-family: sans-serif;
-                font-size: 25px;
+                font-family: Courier, monospace;
                 font-weight: bold;
             }
             div{
@@ -26,6 +24,24 @@
                 align-items: center;
                 justify-content: center;
                 flex-flow: row wrap;
+                position: relative;
+            }
+            span{
+                font-size: 13px;
+                font-weight: bold;
+                position: absolute;
+                padding: 4px;
+                top: 0;
+                left: 0;
+            }
+            p{
+                margin: 0;
+                padding: 0;
+                display: flex;
+                font-size: 25px;
+                font-weight: bold;
+                align-self: center;
+                justify-self: center;
             }
         </style>
     </head>
