clearall and solve buttons

--- a/jogo.html
+++ b/jogo.html
@@ -9,6 +9,7 @@
         <style>
             body{
                 display: flex;
+                flex-flow: row wrap;
                 align-items: center;
                 justify-content: center;
                 width: 100vw;
@@ -16,8 +17,7 @@
                 margin: 0;
                 padding: 0;
                 background-color: #120a8f;
-                font-family: Courier, monospace;
-                font-weight: bold;
+                font-family: monospace;
             }
             div{
                 display: flex;
@@ -28,7 +28,6 @@
             }
             span{
                 font-size: 13px;
-                font-weight: bold;
                 position: absolute;
                 padding: 4px;
                 top: 0;
@@ -37,9 +36,7 @@
             p{
                 margin: 0;
                 padding: 0;
-                display: flex;
                 font-size: 25px;
-                font-weight: bold;
                 align-self: center;
                 justify-self: center;
             }
